Double-precision joints kernel + Newton-refined acos: conformation unchanged
Widen GPU jointsKernel torque/force chain to double; replace polynomial
fastAcosF with Newton-refined accurateAcos (PTX f64 sin/cos/sqrt are
intrinsics). uVec/coord stay float32 in storage; only in-kernel
arithmetic is double. JointDiag pre-check (seed 1, glidingAssay500_val):
theta_RL 1.6026 vs FLOAT32 1.6029 vs DOUBLE reference 1.6763 -
conformation distributions unchanged from prior FLOAT32 baseline. Stop
criterion hit; 10-seed ensemble + dense timing skipped. Confirms the
prior conformation diagnostic's caveat: biased equilibrium is inherited
from float32 pose state (uVec/coord) read by the joint kernel, not from
joint arithmetic precision. Next: promote uVec to double-backed device
state and re-run the JointDiag pre-check.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>